fix search bar layout on mobile

--- a/src/styles/officehour.css
+++ b/src/styles/officehour.css
@@ -1015,16 +1015,17 @@
   /* Main */
   .rec-searchBar {
     display: flex;
-    flex-direction: row;
-    justify-content:center;
-    gap: 80px;
+    flex-direction: column;
+    align-items: center;
   }
   .oh-search-bar {
-    width: 200px;
+    width: 280px;
     height: 40px;
     padding: 10px 16px;
-    font-size: 18px;  
+    font-size: 18px; 
+    margin-bottom: 20px;
   }
+  
   .main-container {
     display: grid;
     width: 100%;
@@ -1236,16 +1237,17 @@
   /* Main */
   .rec-searchBar {
     display: flex;
-    flex-direction: row;
-    justify-content:center;
-    gap: 40px;
+    flex-direction: column;
+    align-items: center;
   }
   .oh-search-bar {
-    width: 180px;
+    width: 250px;
     height: 40px;
     padding: 10px 16px;
-    font-size: 18px;  
+    font-size: 18px; 
+    margin-bottom: 20px;
   }
+
   .main-container {
     display: grid;
     width: 100%;
@@ -1468,16 +1470,17 @@
   /* Main */
   .rec-searchBar {
     display: flex;
-    flex-direction: row;
-    justify-content:center;
-    gap: 40px;
+    flex-direction: column;
+    align-items: center;
   }
   .oh-search-bar {
-    width: 180px;
+    width: 250px;
     height: 40px;
     padding: 8px 12px;
-    font-size: 18px;  
+    font-size: 18px; 
+    margin-bottom: 20px;
   }
+  
   .main-container {
     display: grid;
     width: 100%;
@@ -1698,21 +1701,19 @@
   }
 
   /* Main */
-   .rec-searchBar {
+  .rec-searchBar {
     display: flex;
     flex-direction: column;
     align-items: center;
     gap: 0px;
   }
   .oh-search-bar {
-    width: 180px;
+    width: 220px;
     height: 40px;
     padding: 8px 12px;
     font-size: 18px; 
     margin-bottom: 20px;
   }
-
-
   .main-container {
     display: grid;
     width: 100%;
